--- a/Kodak/public/mix-manifest.json
+++ b/Kodak/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/css/test.css": "/css/test.css",
-    "/css/admin.css": "/css/admin.css"
+    "/js/app.js": "/js/app.js?id=fc22c6bf632e87593a71",
+    "/css/app.css": "/css/app.css?id=7d08d685dc0555256859",
+    "/css/test.css": "/css/test.css?id=6de2d6b375dd6f2c8fab",
+    "/css/admin.css": "/css/admin.css?id=bca323822712b3c871bf"
 }
