--- a/Kodak/public/mix-manifest.json
+++ b/Kodak/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
     "/js/app.js": "/js/app.js?id=f1b3ec26419d124a52d8",
-    "/css/app.css": "/css/app.css?id=cfffe96479f5bd3d628b",
-    "/css/test.css": "/css/test.css?id=8411a28432e753753c87",
-    "/css/admin.css": "/css/admin.css?id=5df9c09daff781679454"
+    "/js/admin.js": "/js/admin.js?id=ac4e1c75e652f8dd8243",
+    "/js/gallery.js": "/js/gallery.js?id=82c290e3951b7c4b656e",
+    "/css/admin.css": "/css/admin.css?id=3b3ffbcb0890080e175a",
+    "/css/app.css": "/css/app.css?id=a3e8705546bbf9a804fb",
+    "/css/test.css": "/css/test.css?id=8411a28432e753753c87"
 }
