--- a/Kodak/public/mix-manifest.json
+++ b/Kodak/public/mix-manifest.json
@@ -1,9 +1,9 @@
 {
-    "/js/app.js": "/js/app.js?id=861df575dc690d03ca4d",
-    "/js/admin.js": "/js/admin.js?id=5c695aab558cc1d5c169",
-    "/js/gallery.js": "/js/gallery.js?id=82c290e3951b7c4b656e",
-    "/js/script.js": "/js/script.js?id=e969d1308f86faf51964",
-    "/css/test.css": "/css/test.css?id=45c7d0dcd6c7c08c695d",
-    "/css/admin.css": "/css/admin.css?id=24335dbbb5dcd31620a1",
-    "/css/app.css": "/css/app.css?id=d4c6fbb29a2732a396ff"
+    "/js/app.js": "/js/app.js?id=d427d479a110816ea01ea34f00a821b3",
+    "/js/admin.js": "/js/admin.js?id=796831f6d80187c45059efbe61dfb42d",
+    "/js/gallery.js": "/js/gallery.js?id=a2b1b1deff8336516e17b17bfc90657b",
+    "/js/script.js": "/js/script.js?id=d82e61a466440018ee5eee2a8b4e93f8",
+    "/css/test.css": "/css/test.css?id=5541b763070f0fa9fe14149096a6019c",
+    "/css/admin.css": "/css/admin.css?id=cde3fdd51828b53bc1c508d64be89d2e",
+    "/css/app.css": "/css/app.css?id=5b0f94289575f10519ba5739b6c27745"
 }
