--- a/Kodak/composer.json
+++ b/Kodak/composer.json
@@ -29,6 +29,7 @@
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
+        "platform-check": false,
         "platform": {
             "php": "7.4.0"
         }
